--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=http://localhost:5000/api
+MONGO_URI=mongodb+srv://<username>:<newpassword>@cluster0.abcd.mongodb.net/mydb?retryWrites=true&w=majority
+JWT_SECRET=<paste-new-random-jwt-secret-here>
+PORT=5000
