--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://<username>:<newpassword>@cluster0.abcd.mongodb.net/mydb?retryWrites=true&w=majority
-JWT_SECRET=<paste-new-random-jwt-secret-here>
+MONGO_URI=mongodb://localhost:27017/
 PORT=5000
+JWT_SECRET=assetsynxxxxasset
